refactor: referenced ids in dto instead of objects